# ParSEval

./: .gitignore  .gitmodules  README-demo.md  README.md  conda_requirements.txt  constant.py  datatypes.py  disjoint_set.py  docker-compose.yml  environment.yml  exceptions.py  file:parseval_california_schools_2  file:parseval_card_games_395  file:parseval_codebase_community_589  file:parseval_debit_card_specializing_1516  file:parseval_european_football_2_1071  file:parseval_financial_157  file:parseval_formula_1_884  file:parseval_student_club_1334  file:parseval_superhero_773  file:parseval_thrombosis_prediction_1170  file:parseval_toxicology_267  main.py  main2 copy.py  main2.py  minimal_env.yml  mkdocs.yml  pip_style_requirements.txt  pyproject.toml  requirements.txt  test_script.py  tmp_test_213.py  udf.json
.agents/: shared.md
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
common/: step.py
data_generator/: generator.py
db/: __init__.py  connection.py  eq.py  instance.py  schema.py  table.py
docker/: Dockerfile
docs/: db_manager.md  domain.md  implementation.md  index.md  instance.md  parseval.md  plan_module_review.md  plan_module_review_v2.md  planner.md  review.md  solver.md  speculative_module_review.md  symbolic-coverage.md  symbolic.md  uexpr-to-constraint.md
examples/: instance_size2.sqlite
logs/: log.log.2024-12-22  log.log.2024-12-30  log.log.2025-01-07  log.log.2025-01-10  log.log.2025-01-17  log.log.2025-01-22  log.log.2025-02-03  log.log.2025-02-05  log.log.2025-02-13  log.log.2025-02-21  (+5 more)
(+6616 files in other folders)
