[project]
name = "parseval"
version = "0.0.1"
description = "Plan-aware Test Database Generation for SQL Equivalence Evaluation"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlglot (==23.12.1)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "func-timeout (==4.3.5)"
]
